[package]
name = "doga-add-numbers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An add numbers package written for educational purposes."
homepage = "https://github.com/dogafincan"
repository = "https://github.com/dogafincan/rust-add-numbers-library/"
readme = "README.md"
keywords = ["math", "add", "numbers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
