[package]
name = "doga-reverse-string"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A string reversal package written for educational purposes."
homepage = "https://github.com/dogafincan"
repository = "https://github.com/dogafincan/rust-reverse-string/"
readme = "README.md"
keywords = ["string", "reverse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"